/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package it.unisa.sgbu.domain;

/**
 *
 * @author dilie
 */
public class ValidatoreDati {
    
    public boolean validaISBN(String isbn){
    }
    
    public boolean validaMatricola(String matricola){
    }
    
    public boolean validaEmail(String email){
    }
    
    public boolean validaAnnoPubblicazione(int anno){
    }
    
    public boolean validaNomeCognome(String nome, String cognome){
    }
}
