/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package it.unisa.sgbu.gui;

/**
 *
 * @author Lorenzo
 */
public class MessaggiInterfaccia {
    public static final String SUCCESSO_AGGIUNTA_LIBRO = "Il libro '%s' è stato aggiunto al catalogo.";
    public static final String SUCCESSO_PRESTITO = "Il prestito (ID: %d) è stato registrato.";
    public static final String ERRORE_LIMITE_PRESTITO = "L'utente %s %s ha raggiunto il limite massimo di prestiti attivi.";
    public static final String ERRORE_ISBN_DUPLICATO = "L'ISBN '%s' è già registrato nel catalogo per il libro '%s'.";
    public static final String ERRORE_MATRICOLA_DUPLICATA = "La matricola '%s' è già presente nell'anagrafe.";
    public static final String ERRORE_ASSENZA_COPIE = "Nessuna copia disponibile del libro '%s' nel catalogo.";
    public static final String INPUT_EMAIL_NON_VALIDO = "Formato e-mail non valido.";
    public static final String INPUT_NOME_NON_VALIDO = "Nome non valido.";
    public static final String INPUT_COGNOME_NON_VALIDO = "Cognome non valido.";
    public static final String INPUT_ANNO_NON_VALIDO = "Anno non valido.";
    public static final String INPUT_MATRICOLA_NON_VALIDO = "Formato matricola non valido.";
    public static final String RITARDO_SEGNALATO = "Il prestito (ID: %d) è in ritardo (superata data prevista di restituzione).";
    public static final String AVVISO_CARICAMENTO_FALLITO = "Caricamento Dati Fallito. Creazione Archivio Vuoto";
    
}
