/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package it.unisa.sgbu.io;

import java.util.*;

/**
 *
 * @author dilie
 */
public interface ILogger {
    
    public void registraAzione(String azione){
    }
    
    public List<String> caricaLog(){
    }
    
    public void salvaLog(){
    }
    
    
}
