@startuml
class it.unisa.sgbu.app.Main
class it.unisa.sgbu.domain.Libro
class it.unisa.sgbu.domain.Prestito
class it.unisa.sgbu.domain.Utente
class it.unisa.sgbu.domain.ValidatoreDati
class it.unisa.sgbu.gui.GUIController
class it.unisa.sgbu.gui.MessaggiInterfaccia
class it.unisa.sgbu.io.AuditTrail
class it.unisa.sgbu.io.FileArchivio
class it.unisa.sgbu.service.Anagrafica
class it.unisa.sgbu.service.Catalogo
class it.unisa.sgbu.service.RegistroPrestiti
class java.time.LocalDate
class java.util.List
interface it.unisa.sgbu.io.IArchivioDati
interface it.unisa.sgbu.io.ILogger
it.unisa.sgbu.domain.Libro ..> java.util.List
it.unisa.sgbu.gui.GUIController ..> java.time.LocalDate
it.unisa.sgbu.service.Catalogo ..> it.unisa.sgbu.domain.Libro
@enduml